--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-
+{
+  "name": "fetch-page-title-backend",
+  "version": "1.0.0",
+  "description": "Node.js backend to fetch webpage titles",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
+    "express": "^4.17.2"
+  }
+}
