--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,22 @@
 {
   "version": 2,
   "routes": [
-    {
-      "src": "/api/fetch-title",
-      "dest": "/index.js"
-    }
+    { "src": "/api/fetch-title", "dest": "/index.js" }
+    // Add more routes as needed
   ],
   "builds": [
+    { "src": "/index.js", "use": "@vercel/node" }
+    // Add more builds as needed
+  ],
+  "headers": [
     {
-      "src": "index.js",
-      "use": "@vercel/node"
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      ]
     }
   ]
 }
