--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,15 @@
 {
   "version": 2,
   "routes": [
-    { "src": "/api/fetch-title", "dest": "/index.js" }
+    {
+      "src": "/api/fetch-title",
+      "dest": "/index.js"
+    }
   ],
   "builds": [
-    { "src": "/index.js", "use": "@vercel/node" }
-  ],
-  "headers": [
     {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
-      ]
+      "src": "index.js",
+      "use": "@vercel/node"
     }
   ]
 }
